# secmend

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROVIDERS.md  USAGE.md
examples/: README.md
secmend/: __init__.py  cli.py  collector.py  detectors.py  models.py  prompt.py  render.py
secmend/providers/: __init__.py  base.py  claude.py  ollama.py  openai.py
tests/: test_cli.py  test_collector.py  test_detectors.py  test_prompt.py  test_providers.py  test_render.py
tests/fixtures/: leaky_config.py
